--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,7 +30,7 @@
 
   - name: enable services on boot
     service: name={{item}} enabled=yes
-    with_items: "{{ programs_on_boot }}”
+    with_items: "{{ programs_on_boot }}"
 
   - name: start httpd
     service: name=httpd state=started
